# TestCUDACMake

./: .gitignore  RefreshBuildDir.sh
Includes/: Common.hpp
Includes/CUDARoutines/: Add.hpp  CUDACommon.hpp  KernelEigen.hpp
Src/: CMakeLists.txt  Tutorial.txt  main.cpp
Src/CUDARoutines/: Add.cu  CMakeLists.txt  KernelEigen.cu
